<resources>
    <string name="app_name">RadarTech</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_notification_needs_installation_title">An application requires installation of Google Play services.</string>
    <string name="common_google_play_services_notification_needs_update_title">An application requires an update for Google Play services.</string>
    <string name="common_android_wear_notification_needs_update_text">An application requires an update to the Android Wear app.</string>
    <string name="common_google_play_services_needs_enabling_title">An application requires Google Play services to be enabled.</string>
    <string name="common_google_play_services_error_notification_requested_by_msg">Requested by %1$s</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_install_text_phone">"This app won't run without Google Play services, which are missing from your phone."</string>
    <string name="common_google_play_services_install_text_tablet">"This app won't run without Google Play services, which are missing from your tablet."</string>
    <string name="common_google_play_services_install_button">Get Google Play services</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_enable_text">"This app won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_button">Enable Google Play services</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_android_wear_update_title">Update Android Wear</string>
    <string name="common_google_play_services_update_text">"This app won't run unless you update Google Play services."</string>
    <string name="common_android_wear_update_text">"This app won't run unless you update the Android Wear app."</string>
    <string name="common_google_play_services_network_error_title">Network Error</string>
    <string name="common_google_play_services_network_error_text">A data connection is required to connect to Google Play services.</string>
    <string name="common_google_play_services_invalid_account_title">Invalid Account</string>
    <string name="common_google_play_services_invalid_account_text">The specified account does not exist on this device. Please choose a different account.</string>
    <string name="common_google_play_services_unknown_issue">Unknown issue with Google Play services.</string>
    <string name="common_google_play_services_unsupported_title">Google Play services</string>
    <string name="common_google_play_services_unsupported_text">Google Play services, which some of your applications rely on, is not supported by your device. Please contact the manufacturer for assistance.</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="wallet_buy_button_place_holder">Buy with Google</string>
    <string name="communicate_failed">Netword disconnect,please check network or try again later</string>
    <string name="load_image_failed">Load image failed</string>
    <string name="loading">Loadingâ€¦</string>
    <string name="press_again_exit">Press again to logout</string>
    <string name="login_account">Enter account/IMEI</string>
    <string name="login_password">Enter password</string>
    <string name="auto_login">Auto Login</string>
    <string name="remember_pass">Remember Password</string>
    <string name="login">Login</string>
    <string name="login_loading">Loadingâ€¦</string>
    <string name="car_list">Target List</string>
    <string name="device_status_never_online">Logged Off</string>
    <string name="device_status_offline">Offline</string>
    <string name="device_status_static">Static</string>
    <string name="device_status_move">Moving</string>
    <string name="device_status_fast_move">Highspeed</string>
    <string name="device_status_over_speed">Overspeed</string>
    <string name="device_status_invalidate">Overdue</string>
    <string name="invalidate_device_tip">"Overdue,can't track"</string>
    <string name="car_trace">Track</string>
    <string name="car_playback">Playback</string>
    <string name="car_info">Settings</string>
    <string name="running">Moving</string>
    <string name="stop">Stop</string>
    <string name="stay_time">Stay duration</string>
    <string name="begin_time">From Date:</string>
    <string name="end_time">To Date:</string>
    <string name="time_select_error">Time is invalidate</string>
    <string name="time_today">Today</string>
    <string name="time_yestoday">Yesterday</string>
    <string name="time_before_yestoday">Before yesterday</string>
    <string name="time_before_one_hour">Hour ago</string>
    <string name="time_customer">User-defined</string>
    <string name="time_customer_title">Choose time range</string>
    <string name="time_customer_date_title">Date</string>
    <string name="time_customer_time_title">Time</string>
    <string name="time_customer_date">Date</string>
    <string name="time_customer_time">Time</string>
    <string name="time_customer_time_default">00:00en dash12:31</string>
    <string name="time_customer_begin_time">From</string>
    <string name="time_customer_end_time">To</string>
    <string name="speed_title">Playback speed</string>
    <string name="speed_very_slow">Very slow</string>
    <string name="speed_slow">Slow</string>
    <string name="speed_normal">Normal</string>
    <string name="speed_fast">Fast</string>
    <string name="speed_very_fast">Very fast</string>
    <string name="play_back_no_record">No gps records in the time range</string>
    <string name="play_back_information">Info</string>
    <string name="play_back_begin">From</string>
    <string name="play_back_end">To</string>
    <string name="play_back_total_distance">Total Distance</string>
    <string name="play_back_year">Y</string>
    <string name="play_back_month">M</string>
    <string name="play_back_day">D</string>
    <string name="play_back_hour">h</string>
    <string name="play_back_minute">m</string>
    <string name="play_back_second">s</string>
    <string name="car_info_device_name">TargetName</string>
    <string name="car_info_plate">License Plate NO.</string>
    <string name="car_info_cellphone">SimCard:</string>
    <string name="car_info_imei">IMEI:</string>
    <string name="car_info_device_type">Type:</string>
    <string name="car_info_open_time">ActivationTime:</string>
    <string name="car_info_end_time">Due to:</string>
    <string name="car_info_online_time">EnableTime:</string>
    <string name="course_north">North</string>
    <string name="course_east_north">Northeast</string>
    <string name="course_east">East</string>
    <string name="course_east_south">Southeast</string>
    <string name="course_south">South</string>
    <string name="course_west_south">Southwest</string>
    <string name="course_west">West</string>
    <string name="course_west_north">Northwest</string>
    <string name="update_device_info_success">Success</string>
    <string name="update_device_info_input_name">Please enter target name</string>
    <string name="provider_info_title">Provider Info</string>
    <string name="edit_password_title">Modify Password</string>
    <string name="edit_password_input_old_password">Enter old password</string>
    <string name="edit_password_input_new_password">Enter new password</string>
    <string name="edit_password_confirm_new_password">Confirm new password</string>
    <string name="edit_password_confirm_password_fail">The new password are not same</string>
    <string name="edit_password_success">Success</string>
    <string name="app_update_title">New version was released, update?</string>
    <string name="app_update_yes">OK</string>
    <string name="app_update_no">Cancel</string>
    <string name="exit_system">Logout</string>
    <string name="command">Command</string>
    <string name="sos1">SOS1:</string>
    <string name="sos2">SOS2:</string>
    <string name="sos3">SOS3:</string>
    <string name="setsos">Set SOS Number</string>
    <string name="waitCmdResponse">Waiting for responseâ€¦</string>
    <string name="monitor">Monitor</string>
    <string name="alarminfo">Alarm Info</string>
    <string name="unreadalarm">Unread Alarms</string>
    <string name="allalarm">All Alarms</string>
    <string name="alarmtype">AlarmType</string>
    <string name="gpstime">GpsTime</string>
    <string name="alarmtime">AlarmTime</string>
    <string name="address_title">Address:</string>
    <string name="alarm_sos">SOS alarm</string>
    <string name="alarm_low_battery">Low battery alarm</string>
    <string name="alarm_power_cutoff">Power disconnect alarm</string>
    <string name="alarm_vibration">Vibration alarm</string>
    <string name="alarm_geofence_in">Geo-fence in alarm</string>
    <string name="alarm_geofence_out">Geo-fence out alarm</string>
    <string name="alarm_overspeed">Overspeed alarm</string>
    <string name="alarm_move">Moving alarm</string>
    <string name="alarm_unknown">Unknown alarm</string>
    <string name="alarm_no_data">No alarm data</string>
    <string name="alarm_no_unreaddata">No unread alarm</string>
    <string name="day">D</string>
    <string name="acc_title">ACC:</string>
    <string name="acc_on">ON</string>
    <string name="acc_off">OFF</string>
    <string name="titlt_confirm">Please Confirm</string>
    <string name="clearallalarm">Are you sure to clear all UNREAD alarms?</string>
    <string name="clearallalarmbtn">Clear</string>
    <string name="clearallalarmSuccess">All UNREAD alarms have been cleared.</string>
    <string name="map_type">Map Type:</string>
    <string name="choose_map_title">Choose Map</string>
    <string name="baidu_map">Baidu Map</string>
    <string name="google_map">Google Map</string>
    <string name="geofence">GEO-fence</string>
    <string name="new_geofence">New</string>
    <string name="nogeofence">No GEO-fence yet</string>
    <string name="geofence_circle">Circle</string>
    <string name="geofence_polygon">Polygon</string>
    <string name="radius">Radius</string>
    <string name="confirm_delete_geofence">Are you sure to delete %s?</string>
    <string name="create_new_geofence">Create New</string>
    <string name="save">Save</string>
    <string name="meter">m</string>
    <string name="circle">Circle</string>
    <string name="polygon">Polygon</string>
    <string name="fencetip_circle">"Drag the slider to modify the circle's radius, move map to choose the center of the circle."</string>
    <string name="fencetip_polygon">Tap the screen to choose the point to construct the polygon.</string>
    <string name="save_fence">Save</string>
    <string name="reset_polygon_fence">Reset</string>
    <string name="no_position_tip">"Can't get the device's position,please try again later"</string>
    <string name="fence_alarmtype">Alarm type:</string>
    <string name="fence_alarm_in">In</string>
    <string name="fence_alarm_out">Out</string>
    <string name="fence_alarm_inout">In&amp;Out</string>
    <string name="efencename">Name:</string>
    <string name="phonenumber">Phonenumber:</string>
    <string name="efencealarminfo">Please input GEO-fence information</string>
    <string name="efencenamewarning">"Please input the GEO-fence's name"</string>
    <string name="show_pwd">show_pwd</string>
</resources>