<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/match_match"
    android:background="@drawable/loginbg"
    android:orientation="vertical"
    android:weightSum="1">


    <include
        layout="@layout/titlebar"
        android:visibility="gone" />


    <LinearLayout
        style="@style/wrap_wrap"
        android:layout_marginTop="@dimen/login_top_padding"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/rl_login_accout_password"
            style="@style/wrap_wrap"
            android:layout_below="@+id/device_list_title"
            android:layout_marginTop="@dimen/login_top_individual"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/rl_login_top"
                style="@style/match_wrap"
                android:layout_marginRight="@dimen/login_top_username"
                android:background="@drawable/strip_login_username">

                <ImageView
                    style="@style/login_images"
                    android:layout_alignBottom="@+id/et_account"
                    android:layout_marginLeft="5dp"
                    android:src="@drawable/login_icon"
                    android:visibility="invisible" />

                <EditText
                    android:id="@+id/et_account"
                    style="@style/match_wrap"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="50dp"
                    android:background="@null"
                    android:hint="@string/login_account"
                    android:paddingBottom="@dimen/login_padding_bottom"
                    android:singleLine="true"
                    android:textColor="@android:color/white"
                    android:textColorHint="@color/body_text_2_inverse"
                    android:textSize="18.0sp" />
            </RelativeLayout>


            <RelativeLayout
                android:id="@+id/rl_login_bottom"
                style="@style/match_wrap"
                android:layout_marginRight="@dimen/login_top_username"
                android:background="@drawable/strip_login_password"
                android:padding="12.0dip">

                <ImageView
                    style="@style/login_images"
                    android:layout_alignBottom="@+id/et_password"
                    android:src="@drawable/login_pswd_icon"
                    android:visibility="invisible" />

                <EditText
                    android:id="@+id/et_password"
                    style="@style/match_wrap"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="50dp"
                    android:layout_marginStart="40dp"
                    android:background="@null"
                    android:hint="@string/login_password"
                    android:inputType="textPassword"
                    android:paddingBottom="@dimen/login_padding_bottom"
                    android:singleLine="true"
                    android:textColor="@android:color/white"
                    android:textColorHint="@color/body_text_2_inverse"
                    android:textSize="18.0sp" />

            </RelativeLayout>


        </LinearLayout>

        <Button
            android:id="@+id/btn_login"
            style="@style/match_wrap"
            android:layout_marginRight="@dimen/login_top_username"
            android:background="@drawable/strip_login_button"
            android:text="@string/login"
            android:textColor="@android:color/white"
            android:textSize="18.0sp" />

        <LinearLayout
            style="@style/wrap_wrap"
            android:layout_marginTop="@dimen/login_base_padding">

            <CheckBox
                android:id="@+id/cbox_remember"
                style="@style/login_checkbox"
                android:layout_below="@id/btn_login"
                android:button="@drawable/checkbox_btn_2"
                android:text="@string/remember_pass"
                android:textColor="@color/white_title"

                />

            <CheckBox
                android:id="@+id/cbox_auto_login"
                style="@style/login_checkbox"
                android:layout_alignRight="@id/rl_login_accout_password"
                android:layout_alignTop="@id/cbox_remember"
                android:button="@drawable/checkbox_btn_2"
                android:text="@string/auto_login"
                android:textColor="@color/white_title"

                />
        </LinearLayout>

        <CheckBox
            android:id="@+id/cbShowPwd"
            style="@style/wrap_wrap"
            android:layout_alignEnd="@id/rl_login_accout_password"
            android:layout_alignRight="@id/rl_login_accout_password"
            android:layout_below="@id/rl_login_accout_password"
            android:text="@string/show_pwd"
            android:textColor="@color/black"
            android:visibility="gone" />
    </LinearLayout>


</LinearLayout>