<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/match_match"
    android:keepScreenOn="true">

    <include
        layout="@layout/titlebar"
        android:visibility="gone" />

    <FrameLayout
        android:id="@+id/fragment_switch"
        style="@style/match_match"
        android:layout_above="@+id/button_layout" />

    <LinearLayout
        android:id="@+id/button_layout"
        style="@style/match_wrap"
        android:weightSum="3"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <LinearLayout
            style="@style/device_tracker"
            android:id="@+id/trace_layout"

            >

            <ImageView
                style="@style/image_view"
                android:id="@+id/trace_iv"
                android:src="@drawable/track_icon_4" />

            <TextView
                android:id="@+id/trace_tv"
                style="@style/text_view"
                android:text="@string/car_trace"
                />


        </LinearLayout>

        <LinearLayout
            style="@style/device_tracker"
            android:id="@+id/playback_layout"

            >

            <ImageView
                style="@style/image_view"
                android:id="@+id/playback_iv"
                android:src="@drawable/playback_icon_4" />

            <TextView
                android:id="@+id/playback_tv"
                style="@style/text_view"
                android:text="@string/car_playback"
                />
        </LinearLayout>

        <LinearLayout
            style="@style/device_tracker"
            android:id="@+id/info_layout"

            >

            <ImageView
                android:id="@+id/info_iv"
                style="@style/image_view"
                android:src="@drawable/settings_4" />

            <TextView
                android:id="@+id/info_tv"
                style="@style/text_view"
                android:text="@string/car_info"

                />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
